// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`URIParams component (integration with AsyncAPI document) renders URI params with multiple query parameters from fixture 1`] = `
"// URI parameters
            String query = \\"\\";
            
            String heartbeat = System.getenv(\\"HEARTBEAT\\");
            if(heartbeat == null || heartbeat.isEmpty()){
              throw new IllegalArgumentException(\\"Required environment variable HEARTBEAT is missing or empty\\");
            }
            query += \\"heartbeat=\\" + URLEncoder.encode(heartbeat, StandardCharsets.UTF_8);

            String bids = System.getenv(\\"BIDS\\");
            if(bids == null || bids.isEmpty()){
              throw new IllegalArgumentException(\\"Required environment variable BIDS is missing or empty\\");
            }
            query += \\"&bids=\\" + URLEncoder.encode(bids, StandardCharsets.UTF_8);


            String queryUri = baseURI + \\"/link\\" + \\"?\\" + query;
            WebSocketClientConnection connection = connector.baseUri(queryUri).connectAndAwait();
            Thread.sleep(120000); // Keep the connection open for 2 minutes"
`;

exports[`URIParams component (integration with AsyncAPI document) renders URI params with single query parameter from fixture 1`] = `
"// URI parameters
            String query = \\"\\";
            
            String heartbeat = System.getenv(\\"HEARTBEAT\\");
            if(heartbeat == null || heartbeat.isEmpty()){
              throw new IllegalArgumentException(\\"Required environment variable HEARTBEAT is missing or empty\\");
            }
            query += \\"heartbeat=\\" + URLEncoder.encode(heartbeat, StandardCharsets.UTF_8);


            String queryUri = baseURI + \\"/link\\" + \\"?\\" + query;
            WebSocketClientConnection connection = connector.baseUri(queryUri).connectAndAwait();
            Thread.sleep(120000); // Keep the connection open for 2 minutes"
`;

exports[`URIParams component (integration with AsyncAPI document) renders nothing when queryParamsArray is empty array 1`] = `""`;

exports[`URIParams component (integration with AsyncAPI document) renders nothing when queryParamsArray is null 1`] = `""`;

exports[`URIParams component (integration with AsyncAPI document) renders nothing when queryParamsArray is undefined 1`] = `""`;
